# leaky_model

./: .gitignore  README.md  data-prep.py  data-reset.sh  generate.py  oneshot.py  preprocess.py  prompts.txt  pyproject.toml  requirements.txt  text_processor.pkl  train.py
model/: text_processor.pkl
scripts/: data-reset.sh
src/: __init__.py  config.py
src/preprocessing/: __init__.py  image_enhancer.py  pdf_processor.py  text_cleaner.py
src/rm/: generate.py  train.py
src/training/: __init__.py  model_builder.py  text_processor.py
src/utils/: __init__.py  graceful_killer.py  progress_tracker.py  text_file_reader.py
training_data/markdown/: .gitkeep
