[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Jason Ross <algorythm@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
keras = "^3.6.0"
tensorflow = "^2.18.0"
tqdm = "^4.67.0"
keras-preprocessing = "^1.1.2"
pymupdf = "^1.24.14"
pytesseract = "^0.3.13"
pillow = "^11.0.0"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
